--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,25 @@ a:focus, a:hover {
 	outline: none
 }
 
-img {
-	width: 100%;
+.main-page {
+	background-color: #E2CAA7;
+	background-image: url("../images/banner.jpg");
+    height: 100%;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 @media (max-width: 992px) {
     .main-section, .policy-section {
         padding: 20px 20px;
     }
+	.main-page {
+		background-size: 100vw auto;
+		background-position-x: center;
+		background-position-y: calc(50% + 30px);
+		background-position-y: -webkit-calc(50% + 30px);
+		background-position-y: -moz-calc(50% + 30px);
+	}
 }
 @media (min-width: 992px) {
     .main-section {
@@ -50,17 +61,15 @@ img {
 	.policy-section {
 		padding: 20px 200px;
 	}
-}
-
-.main-page {
-	background-color: #E2CAA7;
-	background-image: url("../images/banner.jpg");
-    height: 100%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-	background-size: auto calc(100vh - 60px);
-    background-position-x: center;
-    background-position-y: calc(50% + 30px);
+	.main-page {
+		background-size: auto calc(100vh - 60px);
+		background-size: auto -webkit-calc(100vh - 60px);
+		background-size: auto -webkit-calc(100vh - 60px);
+		background-position-x: center;
+		background-position-y: calc(50% + 30px);
+		background-position-y: -webkit-calc(50% + 30px);
+		background-position-y: -moz-calc(50% + 30px);
+	}
 }
 
 .fullscreen {
@@ -156,7 +165,7 @@ nav .dropdown-item:hover {
 	background-color: #0000;
 	border-color: #ba9661;
 	border-width: 2px;
-	width: 15rem;
+	width: 16rem;
 	text-align: center;
     box-shadow: 0 6px 10px #ba96613b, 0 0 6px #ba96612e;
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow;
@@ -174,8 +183,11 @@ nav .dropdown-item:hover {
 
 .games .google-btn {
 	display: inline-block;
-	width: 7rem;
 	transition: .3s transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.games .btn-img {
+	width: 7rem;
 }
 
 .games .google-btn:hover {
