--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a:focus, a:hover {
         padding: 20px 20px;
     }
 	.main-page {
-		background-size: 100vw auto;
+		background-size: 100% auto;
 		background-position-x: center;
 		background-position-y: calc(50% + 30px);
 		background-position-y: -webkit-calc(50% + 30px);
@@ -58,13 +58,15 @@ a:focus, a:hover {
     .main-section {
         padding: 20px 100px;
     }
+
 	.policy-section {
 		padding: 20px 200px;
 	}
+
 	.main-page {
-		background-size: auto calc(100vh - 60px);
-		background-size: auto -webkit-calc(100vh - 60px);
-		background-size: auto -webkit-calc(100vh - 60px);
+		background-size: auto calc(100% - 60px);
+		background-size: auto -webkit-calc(100% - 60px);
+		background-size: auto -webkit-calc(100% - 60px);
 		background-position-x: center;
 		background-position-y: calc(50% + 30px);
 		background-position-y: -webkit-calc(50% + 30px);
@@ -112,6 +114,18 @@ nav .dropdown-menu {
 
 nav .dropdown-item:hover {
 	background-color: #856c46;
+}
+
+@media (max-width: 992px) {
+    nav #navbarNav {
+        background-color: #ba9661;
+		margin: 0px -15px;
+		padding: 0px 10px;
+	}
+
+	nav .dropdown-menu {
+		margin-bottom: 10px;
+	}
 }
 
 .dropdown-item.active, .dropdown-item:active {
