--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,19 @@ a:focus, a:hover {
     .main-section, .policy-section {
         padding: 20px 20px;
     }
+
 	.main-page {
 		background-size: 100% auto;
 		background-position-x: center;
-		background-position-y: calc(50% + 30px);
-		background-position-y: -webkit-calc(50% + 30px);
-		background-position-y: -moz-calc(50% + 30px);
+		background-position-y: 60px;
+	}
+
+	.fullscreen {
+		top: 0; right: 0; bottom: 0; left: 0;
+		height: calc(100vw * (1520 / 2434) + 60px);
 	}
 }
+
 @media (min-width: 992px) {
     .main-section {
         padding: 20px 100px;
@@ -68,15 +73,14 @@ a:focus, a:hover {
 		background-size: auto -webkit-calc(100% - 60px);
 		background-size: auto -webkit-calc(100% - 60px);
 		background-position-x: center;
-		background-position-y: calc(50% + 30px);
-		background-position-y: -webkit-calc(50% + 30px);
-		background-position-y: -moz-calc(50% + 30px);
+		background-position-y: 60px;
 	}
-}
 
-.fullscreen {
-    top: 0; right: 0; bottom: 0; left: 0;
-    height: 100vh;
+	
+	.fullscreen {
+		top: 0; right: 0; bottom: 0; left: 0;
+		height: 100vh;
+	}
 }
 
 .sub-page {
